Scrollview, interfaz card_view, interfaz list

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="temperatura2">26°C</string>
     <string name="sitios">Sitios de Interés:</string>
     <string name="sitios2">Basílica de la Inmaculada Concepción, Mirador Cristo Rey, Teleférico la Garrucha, Cueva del Esplendor, Cueva de los Guácharos, Las Trucheras, Otros sitios de comida: Macanas Jardín, Dulces de Jardín.</string>
+    <string name="iglesia">Basílica de la Inmaculada Concepción</string>
 </resources>
